--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-modal": "^3.16.1",
+    "react-pdf": "^7.5.1",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
